--- a/app/src/main/res/layout/activity_user__profile.xml
+++ b/app/src/main/res/layout/activity_user__profile.xml
@@ -116,8 +116,8 @@
 
     <TextView
         android:id="@+id/txtGamesWon"
-        android:layout_width="140dp"
-        android:layout_height="35dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
@@ -135,14 +135,12 @@
         android:id="@+id/imgBadge3"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgBadge2"
-        app:layout_constraintTop_toBottomOf="@+id/frameStatsBackground"
         app:srcCompat="@mipmap/ic_launcher"
         tools:srcCompat="@android:drawable/sym_def_app_icon"
         tools:visibility="visible" />
@@ -152,14 +150,12 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imgBadge2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameStatsBackground"
         app:srcCompat="@mipmap/ic_launcher"
         tools:srcCompat="@android:drawable/sym_def_app_icon"
         tools:visibility="visible" />
@@ -169,7 +165,6 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:visibility="visible"
@@ -177,7 +172,6 @@
         app:layout_constraintEnd_toStartOf="@+id/imgBadge3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imgBadge1"
-        app:layout_constraintTop_toBottomOf="@+id/frameStatsBackground"
         app:srcCompat="@mipmap/ic_launcher"
         tools:srcCompat="@android:drawable/sym_def_app_icon"
         tools:visibility="visible" />
