--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -46,7 +46,7 @@
             tools:visibility="visible" />
 
         <TextView
-            android:id="@+id/userName"
+            android:id="@+id/userCurrText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
