--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorBG">#FFECC6</color>
     <color name="colorDarkBG">#3C434B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#a8fbff</color>
     <color name="colorProfileBorder">#62594F</color>
 </resources>
