--- a/app/src/main/res/layout/activity_user__profile.xml
+++ b/app/src/main/res/layout/activity_user__profile.xml
@@ -1,31 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorProfileBorder"
+    android:background="@color/colorBG"
     tools:context=".User_Profile">
-
-    <FrameLayout
-        android:id="@+id/frameStatsBackground"
-        android:layout_width="417dp"
-        android:layout_height="327dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/colorBG"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameProfileBackground" />
 
     <TextView
         android:id="@+id/txtCareerStats"
-        android:layout_width="230dp"
-        android:layout_height="37dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="32dp"
         android:text="career stats"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -33,30 +21,11 @@
         android:textColorLink="@color/colorProfileBorder"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/frameStatsBackground" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/frameProfileBackground"
-        android:layout_width="413dp"
-        android:layout_height="290dp"
-        android:background="@drawable/background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-
-        <ImageView
-            android:id="@+id/btnSignOut"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/baseline_settings_black_36" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtProblems"
@@ -131,90 +100,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtCareerStats" />
 
-    <ImageView
-        android:id="@+id/imgBadge3"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgBadge2"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:srcCompat="@android:drawable/sym_def_app_icon"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/imgBadge1"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imgBadge2"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:srcCompat="@android:drawable/sym_def_app_icon"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/imgBadge2"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imgBadge3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imgBadge1"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:srcCompat="@android:drawable/sym_def_app_icon"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="111dp"
-        android:layout_height="110dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="8dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_account_circle_black_48"
-        tools:srcCompat="@drawable/baseline_account_circle_black_48"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/txtUsername"
-        android:layout_width="206dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="4dp"
-        android:text="haydenberryc"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:visibility="visible" />
-
     <TextView
         android:id="@+id/txtTitle"
-        android:layout_width="206dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:autoText="true"
         android:cursorVisible="true"
         android:text="Mathlete"
@@ -223,10 +112,9 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintBottom_toTopOf="@+id/txtCareerStats"
+        app:layout_constraintEnd_toEndOf="@+id/txtCareerStats"
+        app:layout_constraintStart_toStartOf="@+id/txtCareerStats"
         tools:visibility="visible" />
 
     <TextView
@@ -253,8 +141,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_polymer_black_48"
-        tools:srcCompat="@drawable/baseline_polymer_black_48" />
+        app:srcCompat="@drawable/currency_icon_new" />
 
     <TextView
         android:id="@+id/txtTokens"
@@ -263,8 +150,7 @@
         android:layout_marginStart="2dp"
         android:text="1337"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textColorHighlight="@color/colorPrimaryDark"
+        android:textColor="@color/colorDarkBG"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imgToken"
