--- a/app/src/main/res/layout/display_type_number.xml
+++ b/app/src/main/res/layout/display_type_number.xml
@@ -9,6 +9,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto_bold"
         android:text="@string/enter_problems"
         android:textSize="18sp"
@@ -18,17 +19,17 @@
 
     <EditText
         android:id="@+id/inputNumberView"
-        android:layout_width="0dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
+        android:autofillHints="number"
         android:ems="10"
+        android:hint="@string/enter_problems_hint"
         android:inputType="number"
         android:maxLength="3"
-        android:hint="@string/enter_problems"
-        android:autofillHints="number"
-    android:textAlignment="center"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
